<?xml version="1.0"?>
<package format="2">
  <name>flightros</name>
  <version>0.0.1</version>
  <description>ROS-Wrapper for flightlib</description>

  <maintainer email="song@ifi.uzh.ch">Yunlong Song</maintainer>

  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>flightlib</depend>
  <depend>roscpp</depend>
  <depend>autopilot</depend>
  <depend>quadrotor_common</depend>
  <depend>nav_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>pcl_ros</depend> -->

  <build_depend>flightlib</build_depend>
  <build_depend>autopilot</build_depend>
  <build_depend>quadrotor_common</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>flightlib</build_export_depend>
  <build_export_depend>autopilot</build_export_depend>
  <build_export_depend>quadrotor_common</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>flightlib</exec_depend>
  <exec_depend>autopilot</exec_depend>
  <exec_depend>quadrotor_common</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>





  <!-- <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend> -->

</package>
